fixing imagemagick dep

--- a/.ebextensions/googlio.config
+++ b/.ebextensions/googlio.config
@@ -3,5 +3,6 @@ container_commands:
     command: 'rackup -p 80'
 
 packages:
-  apt:
-    imagemagick: []
+  yum:
+    ImageMagick: [],
+    ImageMagick-devel: []
