trying to bundle install first

--- a/.ebextensions/googlio.config
+++ b/.ebextensions/googlio.config
@@ -1,5 +1,7 @@
 container_commands:
-  01startup:
+  01install:
+    command: 'bundle install'
+  02startup:
     command: 'bundle exec rackup'
 
 packages:
